src/index.scss
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
$bg: #F2F2F2;
$black: #000000;
$text: $black;
$light-grey: #D9D9D9;
$grey: #BFBFBF;
$dark-grey: #8C8C8C;
$grey-border: $black;
$grey-shadow: #919191;
/* Color Theme Swatches in Hex */
$paint-splatter-idea-1: #BF3064;
$paint-splatter-idea-2: #A545BF;
$paint-splatter-idea-3: #025373;
$paint-splatter-idea-4: #F29D35;
$paint-splatter-idea-5: #F2784B;


.main-heading {
  h1 {
    background-color: black;
    line-height: 1;
    margin: 0rem;
    text-align: left;
    font-style: italic;
    font-size: 13vw;
    color: white;
    font-weight: 900;
    text-transform: uppercase;
    letter-spacing: -.6rem;
  }
}

.main-display {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  @media all and(min-width: 700px) {
    flex-direction: row;
  }
  h2 {
    font-style: italic;
    font-size: 2rem;
    background-color:black;
    color: white;
    padding: 1rem 1.5rem;
    text-transform: uppercase;
  }
  &-right {
    @media all and(max-width: 700px) {
      margin: auto;
    }
  }
  &-left {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 3rem;
    @media all and(min-width: 700px) {
      //width: 75vw;
    }
    h2 {
      font-size: 1.5rem;
    }
    &-options {
      font-size: 1.25rem;
      line-height: 1.25;
    }
    &-controls {
        line-height: 1.5;
    // Button 3D function adapted from Kathy Kato, so, so rad https://codepen.io/kathykato/pen/gOOjgmP
      &-options {
        text-align: center;
        &-inner {
          display: inline-block;
          text-align: left;
        }
      }
      &-button {
        text-align: center;
      }
    }
  }
  &-right {
    text-align: left;
    h2 {
      text-align: center;
    }
  }
}

svg {
  position: absolute;
  z-index: -1;
}

.card.new-card {
  height: 200px;
  .card-info {
    padding-top: 2.5rem;
    @media all and (min-width: 500px) {
      padding-top: 1.5rem;
    }
  }
  span {
    font-size: 2rem;
    @media all and (min-width: 500px) {
      font-size: 3rem;
    }
  }
  .filled-star, .empty-star {
    width: 2rem !important;
    height: 2rem !important;
  }
  .card-frame svg {
    margin: 0rem;
    @media all and (max-width: 500px) {
      margin: 1.5rem 0 0 3rem;
      width: 330px !important;
      height: 185px !important;
    }
  }
  .delete-card {
    button {
      font-size: 2rem;
      padding: 1rem 3rem 0 0;
      @media all and (min-width: 500px) {
        padding: 0;
      }
    }
  }
}

button.generate-card{
  position: relative;
  display: inline-block;
  cursor: pointer;
  outline: none;
  border: 0;
  vertical-align: middle;
  text-decoration: none;
  font-size: inherit;
  font-family: inherit;
  margin-bottom: 5rem;
  font-size: 2.5rem;
  @media all and(min-width: 500px) {
    font-size: 3rem;
  }
  &.generate-card {
    font-weight: 900;
    color: $text;
    text-transform: uppercase;
    padding: 1em 1.5em;
    background: &light-grey;
    border: 5px solid $grey-border;
    border-top-left-radius: 1em;
    border-bottom-right-radius: 1em;
    transform-style: preserve-3d;
    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
    @media all and(min-width: 500px) {
      padding: 1.25em 2em;
    }
    &::before {
      position: absolute;
      content: '';
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: $dark-grey;
      border-radius: inherit;
      box-shadow: 0 0 0 5px $grey-border, 0 0.625em 0 5px $grey-shadow;
      transform: translate3d(0, 0.75em, -1em);
      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
    }
    &:hover {
      background: $grey;
      transform: translate(0, 0.25em);
      &::before {
        box-shadow: 0 0 0 5px $grey-border, 0 0.5em 0 5px $grey-shadow;
        transform: translate3d(0, 0.5em, -1em);
      }
    }
    &:active {
      background: $grey;
      transform: translate(0em, 0.75em);
      &::before {
        box-shadow: 0 0 0 5px $grey-border, 0 0 $grey-shadow;
        transform: translate3d(0, 0, -1em);
      }
    }
  }
}
.main-display-right-controls {
  text-align: center;
}
.main-display-right-controls button{
  position: relative;
  display: inline-block;
  cursor: pointer;
  outline: none;
  border: 0;
  vertical-align: middle;
  text-decoration: none;
  font-size: inherit;
  font-family: inherit;
  margin-bottom: 4rem;
  font-size: 1.5rem;
  &.sort-cards {
    font-weight: 900;
    color: $text;
    text-transform: uppercase;
    padding: 1em 1em;
    background: &light-grey;
    border: 5px solid $grey-border;
    border-top-left-radius: 1em;
    border-bottom-right-radius: 1em;
    transform-style: preserve-3d;
    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
    &::before {
      position: absolute;
      opacity: 0.85;
      display: inline;
      content: '';
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: $dark-grey;
      border-radius: inherit;
      box-shadow: 0 0 0 5px $grey-border, 0 0.625em 0 5px $grey-shadow;
      transform: translate3d(0, 0.75em, -1em);
      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
    }
    &:hover {
      background: $grey;
      transform: translate(0, 0.25em);
      &::before {
        box-shadow: 0 0 0 5px $grey-border, 0 0.5em 0 5px $grey-shadow;
        transform: translate3d(0, 0.5em, -1em);
      }
    }
    &:active {
      background: $grey;
      transform: translate(0em, 0.75em);
      &::before {
        box-shadow: 0 0 0 5px $grey-border, 0 0 $grey-shadow;
        transform: translate3d(0, 0, -1em);
      }
    }
  }
}
.card {
  margin-bottom: 5rem;
  position: relative;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  .card-frame {
    text-align: left;
  }
  .card-graphics {
    text-align: center;
    svg polygon {
      stroke-width: 6px;
    }
  }
  .card-info {
    display: flex;
    padding-top: 1rem;
    flex-direction: column;
    &-name {
      font-family: Rowdy, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
      sans-serif;
      padding-left: 1rem;
      font-size: 1.75rem;
      text-align: center;
    }
    .filled-star, .empty-star {
      width: 1.2rem;
      height: 1.2rem;
      stroke-width: 5px;
      margin-right: 0.05rem;
      fill: #BF1120;
    }
    .stars {
      text-align: center;
      //margin: auto;
      svg {
        position: static;
      }
    }
  }
}

.card-info, .card-graphics {
  position: relative;
}


.delete-card {
  text-align: right;
  button {
    border: 0;
    background-color: inherit;
    font-size: 1.5rem;
    font-weight: 900;
  }
}

.color-switch {
  margin: 3rem 3rem;
  padding-bottom: 8rem;
  circle{
    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1);
  }
}

